<resources>
    <string name="app_name">Lexi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Perfil</string>
    <string name="perfil">Perfil</string>
    <string name="nombre">Nombre</string>
    <string name="inglenivel">Inglés Nivel 10</string>
    <string name="francesnivel">Francés Nivel 1</string>
    <string name="inglebarra">Inglés 58%</string>
    <string name="francesbarra">Francés 10%</string>
    <string name="progreso">Progreso</string>
    <string name="logros">Logros</string>
    <string name="editarper">Editar Perfil</string>
    <string name="cerrarses">Cerrar Sesión</string>
    <string name="compartir">Compartir</string>
    <string name="miscursos">Mis cursos</string>
    <string name="inicio">Inicio</string>
    <string name="cursonombre">Cursos de Nombre</string>
    <string name="n1">Nivel 1</string>
    <string name="n10">Nivel 10</string>
    <string name="ing">Inglés</string>
    <string name="fr">Francés</string>
    <string name="prog1">Progreso 10%</string>
    <string name="prog2">Progreso 58%</string>
    <string name="continuar">Continuar</string>
    <string name="titulo">Título</string>
    <string name="pregunta">Pregunta</string>
    <string name="tema">Elige un tema</string>
    <string name="negocio">Negocios</string>
    <string name="pelise">Películas/Series</string>
    <string name="deporte">Deportes</string>
    <string name="musica">Música</string>
    <string name="gastro">Gastronomía</string>
    <string name="histo">Historia</string>
    <string name="moda">Moda</string>
    <string name="tradi">Tradiciones</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis id odio at nulla sollicitudin interdum. Donec ornare, urna sit amet porta dictum, est tortor efficitur orci, nec ullamcorper nisl ante eget mi. Pellentesque finibus velit id nulla fermentum aliquet. Nam nec dolor sit amet magna facilisis lacinia. Sed in venenatis massa, eu viverra tortor. Sed ullamcorper lacinia mi in rhoncus. Vestibulum sodales elit id neque mattis, ac laoreet neque congue. Nunc ullamcorper nibh non justo scelerisque, in fringilla orci rutrum. Cras sit amet rhoncus justo. Nunc non dignissim ex, ac imperdiet lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc fringilla dignissim erat vitae sagittis. Integer aliquet ligula non ligula venenatis, eget condimentum felis ultrices. Etiam sed consectetur neque.</string>
    <string name="op1">Opción 1</string>
    <string name="op2">Opción 2</string>
    <string name="op3">Opción 3</string>
    <string name="op4">Opción 4</string>
    <string name="textoneg">The Lean Startup model is an evolution of Toyota\'s traditional concept of Lean Manufacturing applied to production processes, which sought to highlight all those activities that really add value to the production chain. Based on this concept, Eric Ries applied this idea to the launch of new projects inside or outside a corporation.</string>
    <string name="textops"></string>
    <string name="textodep">The Fan Engagement is a new philosophy of relationship management of sports clubs with their fans, but also with sponsors, which is composed of a series of approaches and actions where social networks and mobile applications play a leading role.<b> The main objective of these strategies is to offer attractive and personalized experiences for each of the followers of a sports club, as well as to establish a communication that goes beyond the sporting moments, where the commitment of the fan will have rewards that will allow them to experience the club from totally exclusive perspectives.</b></string>
    <string name="textomus">Au clair de la lune is an anonymous French song from the 17th century. It is only ten seconds during which a female voice sings a French folk song but this recording, dated 1860, is the oldest in the world and has recently been discovered by two US scientists.Earlier this year, historians David Giovannoni and Patrick Feaster discovered a version of "Au Clair de la Lune" by Pierrot Répondit, recorded with the help of a device called a phonoautograph. "We had been searching since last year, it was a real detective job," admitted Giovannoni.</string>
    <string name="textogas">The Kitchen is culture There is nothing like eating customs and table rituals, markets and their products, recipes, consumption and enjoyment habits to describe the physiognomy of a people. The Mexican table is not the same as the Italian, French, Peruvian or Argentinean table. In each of them we can trace histories, landscapes, styles and cultural richness. The cuisines with identity, which shape the place they inhabit, are the ones that last the longest and arouse the greatest attraction. "The culinary hegemony of Oaxaca -Mexico's gastronomic paradise- can be explained because its inhabitants eat Oaxacan," said chef Alejandro Ruiz (Casa Oaxaca restaurant). There, the cuisine is in the fields, in the streets, in the markets, in the memory, in the day to day. Alive.</string>
    <string name="textohis">The Cold War was a political, economic, social, ideological, military and informational confrontation that began after the end of World War II between the Western (Western-capitalist) bloc, led by the United States, and the Eastern (Eastern-communist) bloc, led by the Soviet Union. At the end of World War II, the English writer George Orwell used "cold war" as a general term in his essay You and the Atomic Bomb, published on October 19, 1945 in the British newspaper Tribune. In a world threatened by nuclear war, Orwell referred to James Burnham\'s predictions of a polarized world.</string>
    <string name="textomod">The inventor of jeans is Oscar Levi Strauss. This German-born businessman emigrated to the United States in 1847, specifically to New York City, and in 1853, he moved to San Francisco. There he opened a haberdashery, which soon became Levis Strauss &amp; Co, the first company to manufacture jeans. Levi Strauss died at the age of 73 and his nephews took over the jeans manufacturing business until the present day, under the famous Levi\'s brand. The first jeans or jeans in history were rough pants, so stiff that they stood upright on the floor. But they had a virtue, they were very resistant and had many pockets, not a trivial matter, since the people for whom they were intended needed to carry an infinite number of small tools and ore samples. The miners began to acquire them, and soon Levi Strauss began to run out of them, no matter how many he made, they were taken out of his hands.</string>
    <string name="textotra">Oktoberfest has been celebrated between September and October in the Bavarian city of Munich since 1810. It is the largest popular festival in Germany and one of the largest in the world, with average annual visits exceeding six million visitors.1 It lasts 16 to 18 days, starting on the first Saturday after September 15. It is held on the field known as Theresienwiese ("Therese Meadow"), in the immediate vicinity of the center of Munich, near the Central Station (Hauptbahnhof). The first Beer Festival was held from October 12 to October 17, 1810 to celebrate the marriage of Prince Ludwig I of Bavaria to Princess Therese of Saxony-Hildburghausen. The celebration consisted of a horse race. The beer festival has taken place ever since on the \'Theresienwiese\' (also known simply as Wiesn), an open field right next to the Munich city wall. The well-known modern beer festival has a short tradition compared to other festivals or folk festivals and shooting organizations (Schützenvereine).</string>
    <string name="confirmar">Confirmar</string>
    <string name="traduce">Traduce</string>
    <string name="hola_yo_soy_maria">Hola, yo soy maria</string>
    <string name="hello_i_am_maria">Hello, i am Maria</string>
    <string name="nivel_1">Nivel 1</string>
    <string name="en_espa_ol">En español</string>
    <string name="happy">Happy</string>
    <string name="feliz">Feliz</string>
    <string name="triste">Triste</string>
    <string name="enojado">Enojado</string>
    <string name="calmado">Calmado</string>
    <string name="repite">Repite</string>
    <string name="i_am_happy">I am happy.</string>
    <string name="completa">Completa</string>
    <string name="usando_las_palabras">Usando las palabras:</string>
    <string name="am_are_is">am, are, is.</string>
    <string name="todo" />

    <!--Strings Miriam -->
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrasena">Contrasena</string>
    <string name="conf_contrasena">Confirmar contrasena</string>
    <string name="registrar">Registrar</string>
    <string name="introduccion">Introduccion</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="conectateCon">Conectate con</string>
    <string name="enviar">Enviar</string>

    <string name="crear_cuenta">Crear cuenta</string>
    <string name="titulo_olvidasteContrasena">Olvidaste tu contrasena?</string>
    <string name="contenido_olvidasteContrasena">Se enviara un mensaje al correo electronico
        de tu perfil. Haz click en el mensaje y escribre una contrasena nueva en la pagina que se abra
    </string>
    <string name="n1_basico">Nivel 1 Basico</string>
    <string name="n2_frases">Nivel 2 Frases</string>
    <string name="n3_ocupacion">Nivel 3 Ocupacion</string>

    <string name="basico">Basico</string>
    <string name="intermedio">Intermedio</string>
    <string name="avanzado">Avanzado</string>

    <string name="confirmar">Confirmar</string>
    <string name="traduce">Traduce</string>
    <string name="hola_yo_soy_maria">Hola, yo soy maria</string>
    <string name="hello_i_am_maria">Hello, i am Maria</string>
    <string name="nivel_1">Nivel 1</string>
    <string name="en_espa_ol">En español</string>
    <string name="happy">Happy</string>
    <string name="feliz">Feliz</string>
    <string name="triste">Triste</string>
    <string name="enojado">Enojado</string>
    <string name="calmado">Calmado</string>
    <string name="repite">Repite</string>
    <string name="i_am_happy">I am happy.</string>
    <string name="completa">Completa</string>
    <string name="usando_las_palabras">Usando las palabras:</string>
    <string name="am_are_is">am, are, is.</string>
    <string name="todo" />

    <!--Strings Miriam -->
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrasena">Contrasena</string>
    <string name="conf_contrasena">Confirmar contrasena</string>
    <string name="registrar">Registrar</string>
    <string name="introduccion">Introduccion</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="conectateCon">Conectate con</string>
    <string name="enviar">Enviar</string>

    <string name="crear_cuenta">Crear cuenta</string>
    <string name="titulo_olvidasteContrasena">Olvidaste tu contrasena?</string>
    <string name="contenido_olvidasteContrasena">Se enviara un mensaje al correo electronico
        de tu perfil. Haz click en el mensaje y escribre una contrasena nueva en la pagina que se abra
    </string>
    <string name="n1_basico">Nivel 1 Basico</string>
    <string name="n2_frases">Nivel 2 Frases</string>
    <string name="n3_ocupacion">Nivel 3 Ocupacion</string>

    <string name="basico">Basico</string>
    <string name="intermedio">Intermedio</string>
    <string name="avanzado">Avanzado</string>

</resources>