<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:orientation="vertical"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/tv_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/perfil"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="648dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="157dp"
            android:layout_marginTop="32dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_person_pin_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inglenivel"
            android:textAlignment="center"
            android:textSize="23dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/francesnivel"
            android:textAlignment="center"
            android:textSize="23dp" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp">

            <TableRow>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inglebarra"
                        android:textSize="20dp" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:src="@drawable/gradiantb1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/francesbarra"
                        android:textSize="20dp" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:src="@drawable/gradiantb1" />

                </TableLayout>

                <TableRow>
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/logros"
                        android:background="@drawable/gradient1"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="110dp"/>


                </TableRow>

            </TableRow>


        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TableRow>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/progreso"
                android:layout_marginStart="20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/logros"
                android:layout_marginStart="115dp"/>
            </TableRow>
        </TableLayout>

        <Button
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:text="@string/editarper"/>
        <Button
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:text="@string/cerrarses"/>


    </LinearLayout>

</LinearLayout>