<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/n10"
        android:textAlignment="center"
        android:background="@drawable/round"
        android:backgroundTint="@color/azul_button"
        android:layout_marginTop="20dp"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/lorem"
    android:textSize="20dp"
    android:background="@drawable/roundcorner"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"/>

</LinearLayout>