<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="fill_horizontal"
        android:background="@color/azul_button"
        android:outlineSpotShadowColor="@color/black"
        android:outlineAmbientShadowColor="@color/black"
        android:layout_height="84dp">

        <Button
            android:id="@+id/backbuttontemalectura2"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:text="@string/crear_cuenta"
            android:layout_width="wrap_content"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"/>

    </LinearLayout>

    <EditText
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:inputType="textPersonName"
        android:background="@drawable/roundshadow"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:hint="@string/nombre"
        android:shadowDy="5"
        android:shadowDx="2"
        android:id="@+id/ed_nombre"/>
    <EditText
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:inputType="textPersonName"
        android:background="@drawable/roundshadow"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:hint="@string/correo_electronico"
        android:shadowDy="5"
        android:shadowDx="2"
        android:id="@+id/ed_correo"/>
    <EditText
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:inputType="textPersonName"
        android:background="@drawable/roundshadow"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:hint="@string/contrasena"
        android:shadowDy="5"
        android:shadowDx="2"
        android:id="@+id/ed_contrasena"/>
    <EditText
        android:layout_width="342dp"
        android:layout_height="52dp"
        android:inputType="textPersonName"
        android:background="@drawable/roundshadow"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:hint="@string/conf_contrasena"
        android:shadowDy="5"
        android:shadowDx="2"
        android:id="@+id/ed_contrasena2"
        />
    <Button
        android:text="@string/registrar"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_width="297dp"
        android:background="@drawable/button_gradiant_horizontal_round_corner1"
        android:textColor="@color/white"
        android:layout_height="66dp"
        android:id="@+id/button2"/>


</LinearLayout>