<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:backgroundTintMode="multiply"
    android:background="@drawable/gradiant_pantalla_principal"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView android:layout_width="288dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"


        />
    <EditText
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/correo_electronico"
        android:textAlignment="center"
        android:background="@drawable/round"
        android:layout_gravity="center_horizontal"
        android:id="@+id/ed_correo"/>
    <EditText
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:hint="@string/contrasena"
        android:textAlignment="center"
        android:background="@drawable/round"
        android:layout_gravity="center_horizontal"
        android:id="@+id/ed_contrasena"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/titulo_olvidasteContrasena"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="15dp"
        android:padding="10dp"
        android:layout_height="50dp"/>

    <Button
        android:layout_width="350dp"
        android:id="@+id/btn_iniciarSesion"
        android:background="@drawable/button_blue_roundcorner"
        android:text="@string/iniciarSesion"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/white"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_height="65dp"/>

    <Button
        android:layout_width="350dp"
        android:background="@drawable/button_blue_roundcorner"
        android:text="@string/crear_cuenta"
        android:fontFamily="sans-serif-light"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:padding="5dp"
        android:id="@+id/crear_cuenta"
        android:textSize="20sp"
        android:layout_height="45dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:background="@drawable/figura_circulo"
        android:gravity="center_horizontal"
        android:layout_height="344dp">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="180dp"
            android:layout_height="64dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            app:srcCompat="@drawable/redes" />
        <TextView
            android:text="@string/conectateCon"
            android:layout_width="264dp"
            android:textSize="20sp"
            android:padding="15dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/textView"/>
    </LinearLayout>


</LinearLayout>