<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backbuttonmiscursos"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:id="@+id/tv_mis_cursos"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/miscursos"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="660dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/cursonombre"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:elevation="5dp"
            android:background="@drawable/round">

            <TableRow>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/inglaterra" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/n10"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ing"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prog2"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                    <Button
                        android:id="@+id/buttoncursoingles"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/continuar"
                        android:background="@drawable/gradiantb1"
                        />
                </TableLayout>

            </TableRow>


        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:elevation="5dp"
            android:background="@drawable/round">

            <TableRow>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/francia" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/n1"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fr"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prog1"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                    <Button
                        android:id="@+id/buttoncursofrances"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/continuar"
                        android:background="@drawable/gradiantb1"
                        />
                </TableLayout>

            </TableRow>


        </TableLayout>


    </LinearLayout>

</LinearLayout>