<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".OlvidasteContrasena">

    <ImageView
        android:layout_width="86dp"
        android:layout_height="53dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="left"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:id="@+id/imageView" android:backgroundTint="@color/azul_button"/>
    <TextView
        android:text="@string/titulo_olvidasteContrasena"
        android:layout_width="348dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="15dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content" android:id="@+id/textView2"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="350dp"
        android:background="@drawable/roundcorner"
        android:layout_height="302dp">

        <EditText
            android:layout_width="304dp"
            android:layout_height="39dp"
            android:layout_margin="15dp"

            android:textColorHighlight="@color/black"
            android:background="@drawable/round"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:hint="@string/correo_electronico"
            android:id="@+id/editText2" android:layout_marginLeft="20dp"/>
        <TextView
            android:text="@string/contenido_olvidasteContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:id="@+id/textView4"/>
        <Button
            android:text="@string/enviar"
            android:layout_width="163dp"
            android:textColor="@color/white"
            android:layout_gravity="right"
            android:textAllCaps="false"
            android:layout_marginRight="15dp"
            android:background="@drawable/button_gradiant_horizontal_round_corner1"
            android:layout_height="wrap_content" android:id="@+id/button"/>
    </LinearLayout>



</LinearLayout>